--- a/views/learn/learn-home.ejs
+++ b/views/learn/learn-home.ejs
@@ -11,15 +11,51 @@
             </div>
         </div>
 
-        <div class="great-idea">
-            <h2>Got a Great Idea?</h2>
-            <p>If you have a great idea for a tutorial or a new course, please send us your suggestion <a href="suggest-or-request-form.html" onclick="OpenLink(this)">here</a>.</p>
+        <div class="offered">
+            <h2>Learn Here on Genius Coding</h2>
+            <div class="course">
+                <div class="img-holder two">
+                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
+                    <div class="css" style="background-image: url('/images/site-images/card-images/css.png')"></div>
+                </div>
+                <a class="course-title-link" href="/course/62d06b7ce0bcc73738ea3146">
+                    <h3 class="noneT"><span class="htmlT">HTML</span> &amp; <span class="cssT">CSS</span></h3>
+                </a>
+                <div class="tags">
+                    <div class="tag html">HTML</div>
+                    <div class="tag css">CSS</div>
+                </div>
+            </div>
+            <div class="tutorial">
+                <div class="img-holder two">
+                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
+                    <div class="css" style="background-image: url('/images/site-images/card-images/css.png')"></div>
+                </div>
+                <a class="course-title-link" href="/tutorial/[tutorial_id]">
+                    <h3 class="noneT">Helpful Menu</h3>
+                </a>
+                <div class="tags">
+                    <div class="tag html">HTML</div>
+                    <div class="tag css">CSS</div>
+                </div>
+            </div>
+            <div class="reference">
+                <div class="img-holder html">
+                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
+                </div>
+                <a class="course-title-link" href="/reference/html">
+                    <h3 class="noneT">Quick Reference</h3>
+                </a>
+                <div class="tags">
+                    <div class="tag html">HTML</div>
+                </div>
+            </div>
         </div>
 
-        <pre>let test = "This is a test";
-function Test() {
-    console.log(test);
-}</pre>
+        <div class="great-idea">
+            <h2>Got a Great Idea?</h2>
+            <p>If you have a great idea for a tutorial or a new course, please send us your suggestion <a href="https://forms.gle/cx92StLYUyhDm8NH7" target="_blank">here</a>.</p>
+        </div>
     </main>
 
 <%- include('../includes/end.ejs') %>
