--- a/public/scss/learn.scss
+++ b/public/scss/learn.scss
@@ -28,6 +28,223 @@
     }
 }
 
+
+.offered {
+    display: flex;
+    grid-gap: 20px 10px;
+    align-items: center;
+    grid-auto-rows: 100px;
+    justify-content: space-around;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+
+    h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .course, .tutorial, .reference {
+        height: 100px;
+        overflow: hidden;
+        border-radius: 5px;
+        align-items: center;
+        background-color: #F1F1F1;
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 100px auto;
+        @include box-shadow();
+        position: relative;
+        display: grid;
+        width: 260px;
+
+        a {
+            text-decoration: none;
+
+            & > h3 {
+                padding-left: 10px;
+                grid-column: 2;
+                grid-row: 1;
+                margin: 0;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+        .img-holder {
+            height: 100%;
+            grid-column: 1;
+            grid-row: 1 / span 2;
+            transition: all 0.3s;
+            transform: translate(-2px, 1px) scale(1.1) rotate(-5deg);
+            box-shadow: 1px 1px 5px $primary-color;
+            
+            div {
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+            &.java {
+                background-image: linear-gradient(#E76F00,#8C4201);
+            }
+            &.java div {
+                background-size: 70%;
+            }
+            &.pjs div {
+                background-size: 115%;
+            }
+        }
+        &:hover .img-holder {
+            transform: translate(-8px, 1px) scale(1.3) rotate(-8deg);
+        }
+        .img-holder.two {
+            background-image: linear-gradient(#E34E24 50%,#1173BC 50%);
+            div {
+                width: 100%;
+                height: 50%;
+                background-position: center;
+                background-size: 75%;
+            }
+        }
+        &:not(.reference)::after {
+            font-size: 11px;
+            position: absolute;
+            background-color: $accent1-color;
+            transform: translate(-50%) rotate(-45deg) translate(0, -30px);
+            transform-origin: center -50px;
+            border-radius: 0 0 50% 50%;
+            @include box-shadow();
+            padding: 3px 20px;
+            top: 50%; left: 0;
+        }
+    }
+    .course::after {
+        content: 'COURSE';
+    }
+    .tutorial::after {
+        content: 'TUTORIAL';
+    }
+    
+    .tags {
+        justify-self: end;
+        grid-column: 2;
+        grid-row: 2;
+    }
+    .tags .tag {
+        display: inline-block;
+        margin-right: 5px;
+        &:not(div) { cursor: pointer; }
+        &:is(div) { cursor: default; }
+        &:hover { color: $other-color; }
+    }
+}
+.noneT {
+    color: $primary-color;
+}
+.htmlT, .cssT {    
+    font-family: $heading-font;
+}
+.htmlT {
+    color: #E34E24;
+}
+.cssT {
+    color: #1173BC;
+}
+.cppT {
+    color: #0080CD;
+}
+.jsT {
+    color: #67A969;
+}
+.pjsT {
+    color: #012542;
+}
+.javaT {
+    color: #E76F00;
+}
+.pythonT {
+    color: #4A98C8;
+}
+.rubyT {
+    color: #F05336;
+}
+.jqT {
+    color: #3558A8;
+}
+.phpT {
+    color: #007AFF;
+}
+
+
+a.tag, div.tag {
+    background-color: rgba(255,255,255,0);
+    border: solid 2px $accent1-color;
+    font-family: $heading-font;
+    color: $accent1-color;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-right: 5px;
+    padding: 4px;
+}
+a.tag:hover, div.tag:hover {
+    background-color: $accent1-color;
+    color: $other-color;
+    text-decoration: none;
+}
+.tag.html {
+    color: #E34E24;
+    border: solid 2px #E34E24;
+}
+.tag.css {
+    color: #1173BC;
+    border: solid 2px #1173BC;
+}
+.tag.cpp {
+    color: #0080CD;
+    border: solid 2px #0080CD;
+}
+.tag.javascript {
+    color: #67A969;
+    border: solid 2px #67A969;
+}
+.tag.pjs {
+    color: #012542;
+    border: solid 2px #012542;
+}
+.tag.java {
+    color: #E76F00;
+    border: solid 2px #E76F00;
+}
+.tag.python {
+    color: #4A98C8;
+    border: solid 2px #4A98C8;
+}
+.tag.ruby, .tag.jquery, .tag.php {
+    background-color: $accent1-color;
+    color: $other-color;
+}
+.tag.html:hover {
+    background-color: #E34E24;
+}
+.tag.css:hover {
+    background-color: #1173BC;
+}
+.tag.cpp:hover {
+    background-color: #0080CD;
+}
+.tag.javascript:hover {
+    background-color: #67A969;
+}
+.tag.pjs:hover {
+    background-color: #012542;
+}
+.tag.java:hover {
+    background-color: #E76F00;
+}
+.tag.python:hover {
+    background-color: #4A98C8;
+}
+
+
 .great-idea {
     width: 50%;
     min-width: 250px;
@@ -54,13 +271,40 @@
     grid-template-columns: 1fr 400px;
     grid-template-rows: 3rem;
     align-items: center;
-    // row-gap: 0.5rem;
     h2, h3 {
         margin: 0;
     }
     
     .project-title {
+        width: max-content;
         margin-left: 1.5rem;
+        grid-template-columns: auto max-content;
+        align-items: center;
+        column-gap: 0.5rem;
+        display: grid;
+
+        span {
+            width: 100%;
+            border: none;
+            outline: none;
+            font-size: 1.8rem;
+            background: none;
+            font-family: $heading-font;
+            border-bottom: 2px solid transparent;
+            margin-bottom: 0.25rem;
+            padding: 0 0.5rem;
+
+            &:focus {
+                border-bottom: 2px solid $accent2-color;
+            }
+        }
+        button {
+            font-weight: bold;
+            color: $primary-color;
+            background: none;
+            cursor: pointer;
+            border: none;
+        }
     }
     .layout-options {
         display: flex;
@@ -148,6 +392,9 @@
 
             * {
                 margin: 0;
+                display: flex;
+                column-gap: 0.25rem;
+                align-items: center;
             }
         }
     }
@@ -213,11 +460,13 @@
                 grid-row: 1 / -1;
                 height: 64px;
                 width: 64px;
+                border: 3px solid $secondary-color;
             }
             .user-name {
                 width: 100%;
                 grid-column: 2;
                 @include ellipses;
+                display: block;
                 grid-row: 1;
                 margin: 0;
             }
@@ -230,6 +479,20 @@
                 grid-column: 2;
                 grid-row: 2;
             }
+        }
+        .project-details {
+            display: grid;
+            align-items: center;
+            justify-self: start;
+            box-sizing: content-box;
+            background-color: $other-color;
+            grid-template-columns: max-content max-content;
+            @include box-shadow();
+            grid-auto-rows: 1fr;
+            border-radius: 10px;
+            column-gap: 1rem;
+            padding: 1rem;
+            width: 264px;
         }
     }
 }
@@ -256,5 +519,34 @@
         &:hover {
             background-color: rgba($primary-color, 0.8);
         }
+    }
+}
+
+button.withSymbol {
+    display: flex;
+    column-gap: 0.25rem;
+    align-items: center;
+}
+
+.padded-container {
+    padding: 1rem;
+    h2 { text-align: left !important; }
+}
+
+.course-article {
+    display: block;
+    padding: 0.5rem;
+    border: 1px solid $primary-color;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+    &:first-of-type {
+        margin-top: 0.5rem;
+        border-radius: 10px 10px 0 0;
+    }
+    &:last-of-type {
+        border-radius: 0 0 10px 10px;
     }
 }
