--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,8 +11,8 @@
                 <h2>Login</h2>
                 <form action="/login<%= queryParams %>" method="post">
                     <div class="input-container">
-                        <input type="text" name="email" id="email" value="<%= previous?.email %>" required>
-                        <label for="email">Email</label>
+                        <input type="text" name="username" id="username" value="<%= previous?.username %>" required>
+                        <label for="username">Username</label>
                     </div>
                     <div class="input-container">
                         <input type="password" name="password" id="password" required>
