--- a/views/includes/code-project.ejs
+++ b/views/includes/code-project.ejs
@@ -1,5 +1,5 @@
-<div class="code-playground side-by-side" data-project-id="<%= projectId %>">
-    <h2 class="project-title">New Project</h2>
+<div class="code-playground <%= editorLayout %>" data-project-id="<%= projectId %>">
+    <h2 class="project-title"><span id="projectTitle" role="textbox" contenteditable="true"><%= projectTitle ? projectTitle : 'New Project' %></span><button onclick="$('#projectTitle').focus()">Edit Title</button></h2>
     <div class="layout-options">
         <h3>Layout:</h3>
         <button class="side-by-side">
@@ -11,23 +11,28 @@
             <div></div>
         </button>
     </div>
-    <div class="ace-editor" data-language="<%= programmingLanguage %>"><%= projectCode %></div>
+    <div class="ace-editor" data-theme="<%= editorTheme %>" data-language="<%= programmingLanguage %>"><%= projectCode %></div>
     <div class="live-demo">
         <iframe src="" sandbox=""></iframe>
     </div>
     <div class="playground-footer">
         <div class="action-buttons">
-            <button class="run btn">Run</button>
-            <button class="save btn"><%= isOwn ? 'Save' : 'Save As' %></button>
+            <button class="run btn"><span class="material-symbols-outlined">play_arrow</span>Run</button>
+            <button class="save btn"><%- isOwn ? '<span class="material-symbols-outlined">save</span>Save' : '<span class="material-symbols-outlined">save_as</span>Save As' %></button>
         </div>
     </div>
     <%- include('./csrf-token.ejs') %>
     <% if (projectId.toString().length > 0) { %>
         <div class="project-info">
             <div class="user-info">
-                <img src="/images/profile-images/pi-<%= user.profileImg %>-sm.png" alt="<%= user.displayName %>'s avatar" class="profile-pic">
+                <img src="/images/profile-images/pi-<%= user.profileImg %>.png" alt="<%= user.displayName %>'s avatar" class="profile-pic">
                 <h4 class="user-name"><%= user.displayName %></h4>
                 <a href="/user/profile/<%= user.username %>" class="view-profile">View Profile</a>
+            </div>
+            <div class="project-details">
+                <b>Language:</b> <span><%= programmingLanguage.toUpperCase() %></span>
+                <b>Created:</b> <span><%= projectCreated %></span>
+                <b>Last Updated:</b> <span><%= projectUpdated %></span>
             </div>
         </div>
     <% } %>
